--- a/style.css
+++ b/style.css
@@ -196,6 +196,9 @@ ul.menu2-left>.list-group-item {
 .carousel-control.left, .carousel-control.right {
   background-image: none !important;
 }
+.thumbnail{
+  border: none;
+}
 .img-egresado{
   width: 293px;
 }
