--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
   }
   h1, h2, h3, h4, h5, h6 {
     font-weight: 900;
+    font-family: 'Montserrat', sans-serif;
 }
 
 h1 {
@@ -37,7 +38,7 @@ h1 {
   body {
     font-size: 16px;
     color: #333;
-    font-family: Mulish !important;
+    font-family: 'Open Sans', sans-serif;
   }
   p {
     line-height: 1.7;
